--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__container container">
-        <div class="footer__item item">
+        <div class="footer__item  footer__item--mobile   item">
           <a href="./index.html" class="logo logo--footer"
             >Web<span class="logo__secondary-part logo__secondary-part--light">Studio</span></a
           >
@@ -450,8 +450,8 @@
             </ul>
           </address>
         </div>
-        <div class="footer__networks item">
-          <p class="footer__desc">приєднуйтесь</p>
+        <div class="footer__networks footer__networks--mobile  item">
+          <p class="footer__desc  footer__desc--mobile ">приєднуйтесь</p>
           <ul class="socials list">
             <li class="socials__item item">
               <a
@@ -505,7 +505,7 @@
         </div>
         <div class="subscription item">
           <label class="subscription__form item">
-            <span class="subscription__label">Підпишіться на розсилку</span>
+            <span class="subscription__label subscription__label--mobile  ">Підпишіться на розсилку</span>
             <input
               class="subscription__input"
               type="email"
