--- a/portfolio.html
+++ b/portfolio.html
@@ -25,23 +25,21 @@
           >
           <ul class="nav__list item list">
             <li class="nav__item">
-              <a class="nav__link" href="./index.html">Студія</a>
+              <a class="nav__link " href="./index.html">Студія</a>
             </li>
-            <li class="nav__item">
-              <a class="nav__link nav__link--current" href="./portfolio.html">Портфоліо</a>
-            </li>
+            <li class="nav__item"><a class="nav__link   nav__link--current" href="./portfolio.html">Портфоліо</a></li>
             <li class="nav__item"><a class="nav__link" href="">Контакти</a></li>
           </ul>
         </nav>
-        <ul class="contacts header__contacts list">
-          <li class="contacts__item">
+        <ul class="contacts contacts__contacts--tablet list">
+          <li class="contacts__item item">
             <a class="contacts__link" href="mailto:info@devstudio.com">
               <svg class="contacts__icon">
                 <use href="./images/symbol-defs.svg#icon-envelope"></use></svg
               >info@devstudio.com
             </a>
           </li>
-          <li class="contacts__item">
+          <li class="contacts__item item">
             <a class="contacts__link" href="tel:+380961111111">
               <svg class="contacts__icon contacts__icon--tel">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use></svg
@@ -240,14 +238,14 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer">
+  <footer class="footer">
       <div class="footer__container container">
-        <div class="item">
-          <a href="./index.html" class="logo footer__logo"
+        <div class="footer__item  footer__item--mobile   item">
+          <a href="./index.html" class="logo logo--footer"
             >Web<span class="logo__secondary-part logo__secondary-part--light">Studio</span></a
           >
           <!-- Adress -->
-          <address class="address">
+          <address class="address item">
             <ul class="address__list item list">
               <li class="address__item">
                 <a class="address__link address__link--location" href=""
@@ -267,8 +265,8 @@
             </ul>
           </address>
         </div>
-        <div class="footer__networks item">
-          <p class="footer__desc">приєднуйтесь</p>
+        <div class="footer__networks footer__networks--mobile  item">
+          <p class="footer__desc  footer__desc--mobile ">приєднуйтесь</p>
           <ul class="socials list">
             <li class="socials__item item">
               <a
@@ -322,7 +320,7 @@
         </div>
         <div class="subscription item">
           <label class="subscription__form item">
-            <span class="subscription__label">Підпишіться на розсилку</span>
+            <span class="subscription__label subscription__label--mobile  ">Підпишіться на розсилку</span>
             <input
               class="subscription__input"
               type="email"
