--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
       <!-- Regular-clients -->
       <section class="clients section">
         <div class="container">
-          <h2 class="clients__title">Постійні клієнти</h2>
+          <h2 class="clients__title  clients__title--mobile">Постійні клієнти</h2>
           <ul class="clients__list list">
             <li class="clients__item item">
               <a class="clients__link" href="" target="_blank" rel="nofollow noopener noreferrer">
