--- a/index.html
+++ b/index.html
@@ -23,6 +23,68 @@
           <a href="./index.html" class="logo"
             >Web<span class="logo__secondary-part">Studio</span></a
           >
+          <button
+            type="button"
+            class="menu-button is-open"
+            aria-expanded="true"
+            aria-controls="menu-container"
+            data-menu-button
+          >
+            <svg class="mobile-btn-icon" width="24px" height="16px">
+              <use
+                class="mobile-btn-icon__menu"
+                href="./images/symbol-defs.svg#icon-mobile-btn-icon"
+              ></use>
+              <use class="mobile-btn-icon__close" href="./images/symbol-defs.svg#icon-close"></use>
+            </svg>
+          </button>
+          <div class="menu-container" id="menu-container" data-menu>
+            <div class="menu-nav">
+              <ul class="menu-nav__list item list">
+                <li class="menu-nav__item">
+                  <a class="menu-nav__link menu-nav__link--current" href="./index.html">Студія</a>
+                </li>
+                <li class="menu-nav__item">
+                  <a class="menu-nav__link" href="./portfolio.html">Портфоліо</a>
+                </li>
+                <li class="menu-nav__item">
+                  <a class="menu-nav__link" href="">Контакти</a>
+                </li>
+              </ul>
+            </div>
+            <div class="menu-contacts">
+              <ul class="menu-contacts__list list">
+                <li class="menu-contacts__item item">
+                  <a
+                    class="menu-contacts__link menu-contacts__link--mobile"
+                    href="tel:+380961111111"
+                    >+38 096 111 11 11
+                  </a>
+                </li>
+                <li class="menu-contacts__item item">
+                  <a class="menu-contacts__link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="menu-socials">
+              <ul class="menu-socials__list list">
+                <li class="menu-socials__item item">
+                  <a class="menu-socials__link" href="">Instagram</a>
+                </li>
+                <li class="menu-socials__item item">
+                  <a class="menu-socials__link" href="">Twitter</a>
+                </li>
+                <li class="menu-socials__item item">
+                  <a class="menu-socials__link" href="">Facebook</a>
+                </li>
+                <li class="menu-socials__item item">
+                  <a class="menu-socials__link" href="">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
+          </div>
           <ul class="nav__list item list">
             <li class="nav__item">
               <a class="nav__link nav__link--current" href="./index.html">Студія</a>
@@ -49,6 +111,7 @@
         </ul>
       </div>
     </header>
+
     <main>
       <!-- Hero -->
       <section class="hero hero--overlay">
@@ -380,7 +443,7 @@
       <!-- Regular-clients -->
       <section class="clients section">
         <div class="container">
-          <h2 class="clients__title ">Постійні клієнти</h2>
+          <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list list">
             <li class="clients__item item">
               <a class="clients__link" href="" target="_blank" rel="nofollow noopener noreferrer">
@@ -425,7 +488,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__container container">
-        <div class="footer__item  footer__item--mobile   item">
+        <div class="footer__item footer__item--mobile item">
           <a href="./index.html" class="logo logo--footer"
             >Web<span class="logo__secondary-part logo__secondary-part--light">Studio</span></a
           >
@@ -450,8 +513,8 @@
             </ul>
           </address>
         </div>
-        <div class="footer__networks footer__networks--mobile  item">
-          <p class="footer__desc  footer__desc--mobile ">приєднуйтесь</p>
+        <div class="footer__networks footer__networks--mobile item">
+          <p class="footer__desc footer__desc--mobile">приєднуйтесь</p>
           <ul class="socials list">
             <li class="socials__item item">
               <a
@@ -505,7 +568,9 @@
         </div>
         <div class="subscription item">
           <label class="subscription__form item">
-            <span class="subscription__label subscription__label--mobile  ">Підпишіться на розсилку</span>
+            <span class="subscription__label subscription__label--mobile"
+              >Підпишіться на розсилку</span
+            >
             <input
               class="subscription__input"
               type="email"
@@ -522,7 +587,7 @@
         </div>
       </div>
     </footer>
-     <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal__btn" type="button" data-modal-close>
           <svg class="modal__icon" width="11" height="11">
@@ -571,16 +636,10 @@
               name="user-agreement"
             />
             <svg class="register__pic" width="16" height="15">
-              <use
-                class="register__uncheck"
-                href="./images/symbol-defs.svg#icon-unchecked"
-              ></use>
-              <use
-                class="register__check"
-                href="./images/symbol-defs.svg#icon-checked"
-              ></use>
+              <use class="register__uncheck" href="./images/symbol-defs.svg#icon-unchecked"></use>
+              <use class="register__check" href="./images/symbol-defs.svg#icon-checked"></use>
             </svg>
-            <span class="register__text-lable   register__text-lable--mobile"
+            <span class="register__text-lable register__text-lable--mobile"
               >Погоджуюся з розсилкою та приймаю
               <a class="register__text-link" href="" target="_blank">Умови договору</a>
             </span>
@@ -590,6 +649,14 @@
         </form>
       </div>
     </div>
+    
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
 
     <script src="./js/modal.js"></script>
     <script>
