--- a/index.html
+++ b/index.html
@@ -210,7 +210,16 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
             <li class="team__item item">
-              <img src="./images/foto-demianenko.jpg" alt="foto-product-designer" width="270" />
+              <img
+                srcset="
+                  ./images/foto-demianenko/foto-demianenko-270.jpg 270w,
+                  ./images/foto-demianenko/foto-demianenko-354.jpg 354w,
+                  ./images/foto-demianenko/foto-demianenko-450.jpg 450w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                src="./images/foto-demianenko/foto-demianenko-450.jpg"
+                alt="foto-product-designer"
+              />
               <div class="team__wrap">
                 <h3 class="team__name">Ігор Дем'яненко</h3>
                 <p class="team__position">Product Designer</p>
@@ -267,7 +276,16 @@
               </div>
             </li>
             <li class="team__item item">
-              <img src="./images/foto-repina.jpg" alt="foto-frontend-developer" width="270" />
+              <img
+                srcset="
+                  ./images/foto-repina/foto-repina-270.jpg 270w,
+                  ./images/foto-repina/foto-repina-354.jpg 354w,
+                  ./images/foto-repina/foto-repina-450.jpg 450w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                src="./images/foto-repina/foto-repina-450.jpg"
+                alt="foto-product-designer"
+              />
               <div class="team__wrap">
                 <h3 class="team__name">Ольга Рєпіна</h3>
                 <p class="team__position">Frontend Developer</p>
@@ -324,7 +342,16 @@
               </div>
             </li>
             <li class="team__item item">
-              <img src="./images/foto-tarasov.jpg" alt="foto-marketing" width="270" />
+              <img
+                srcset="
+                  ./images/foto-tarasov/foto-tarasov-270.jpg 270w,
+                  ./images/foto-tarasov/foto-tarasov-354.jpg 354w,
+                  ./images/foto-tarasov/foto-tarasov-450.jpg 450w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                src="./images/foto-tarasov/foto-tarasov-450.jpg"
+                alt="foto-product-designer"
+              />
               <div class="team__wrap">
                 <h3 class="team__name">Микола Тарасов</h3>
                 <p class="team__position">Marketing</p>
@@ -381,7 +408,16 @@
               </div>
             </li>
             <li class="team__item item">
-              <img src="./images/foto-ermakov.jpg" alt="foto-ui-designer" width="270" />
+              <img
+                srcset="
+                  ./images/foto-ermakov/foto-ermakov-270.jpg 270w,
+                  ./images/foto-ermakov/foto-ermakov-354.jpg 354w,
+                  ./images/foto-ermakov/foto-ermakov-450.jpg 450w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                src="./images/foto-ermakov/foto-ermakov-450.jpg"
+                alt="foto-product-designer"
+              />
               <div class="team__wrap">
                 <h3 class="team__name">Михайло Єрмаков</h3>
                 <p class="team__position">UI Designer</p>
@@ -649,7 +685,7 @@
         </form>
       </div>
     </div>
-    
+
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
