--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,16 @@
             <li class="product__item item">
               <a class="product__link" href="">
                 <div class="product__wrap">
-                  <img src="./images/successful-people.jpg" alt="successful people" width="370" />
+                  <img
+                    srcset="
+                      ./images/successful-people/successful-people-354.jpg 354w,
+                      ./images/successful-people/successful-people-370.jpg 370w,
+                      ./images/successful-people/successful-people-450.jpg 450w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                    src="./images/successful-people/successful-people-450.jpg"
+                    alt="foto-product-designer"
+                  />
                   <div class="product__overlay">
                     <p class="product__desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -158,7 +167,16 @@
             <li class="product__item item">
               <a class="product__link" href="">
                 <div class="product__wrap">
-                  <img src="./images/basketball-poster.jpg" alt="basketball poster" width="370" />
+                  <img
+                    srcset="
+                      ./images/basketball-poster/basketball-poster-354.jpg 354w,
+                      ./images/basketball-poster/basketball-poster-370.jpg 370w,
+                      ./images/basketball-poster/basketball-poster-450.jpg 450w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                    src="./images/basketball-poster/basketball-poster-450.jpg"
+                    alt="foto-product-designer"
+                  />
                   <div class="product__overlay">
                     <p class="product__desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -176,7 +194,16 @@
             <li class="product__item item">
               <a class="product__link" href="">
                 <div class="product__wrap">
-                  <img src="./images/signboard.jpg" alt="signboard" width="370" />
+                  <img
+                    srcset="
+                      ./images/signboard/signboard-354.jpg 354w,
+                      ./images/signboard/signboard-370.jpg 370w,
+                      ./images/signboard/signboard-450.jpg 450w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                    src="./images/signboard/signboard-450.jpg"
+                    alt="foto-product-designer"
+                  />
                   <div class="product__overlay">
                     <p class="product__desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -194,7 +221,16 @@
             <li class="product__item item">
               <a class="product__link" href="">
                 <div class="product__wrap">
-                  <img src="./images/headphones.jpg" alt="headphones" width="370" />
+                  <img
+                    srcset="
+                      ./images/headphones/headphones-354.jpg 354w,
+                      ./images/headphones/headphones-370.jpg 370w,
+                      ./images/headphones/headphones-450.jpg 450w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                    src="./images/headphones/headphones-450.jpg"
+                    alt="foto-product-designer"
+                  />
                   <div class="product__overlay">
                     <p class="product__desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -212,7 +248,16 @@
             <li class="product__item item">
               <a class="product__link" href="">
                 <div class="product__wrap">
-                  <img src="./images/magazine.jpg" alt="magazine" width="370" />
+                  <img
+                    srcset="
+                      ./images/boxes/boxes-354.jpg 354w,
+                      ./images/boxes/boxes-370.jpg 370w,
+                      ./images/boxes/boxes-450.jpg 450w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                    src="./images/boxes/boxes-450.jpg"
+                    alt="foto-product-designer"
+                  />
                   <div class="product__overlay">
                     <p class="product__desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -230,7 +275,16 @@
             <li class="product__item item">
               <a class="product__link" href="">
                 <div class="product__wrap">
-                  <img src="./images/monitor.jpg" alt="monitor" width="370" />
+                  <img
+                    srcset="
+                      ./images/monitor/monitor-354.jpg 354w,
+                      ./images/monitor/monitor-370.jpg 370w,
+                      ./images/monitor/monitor-450.jpg 450w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                    src="./images/monitor/monitor-450.jpg"
+                    alt="foto-product-designer"
+                  />
                   <div class="product__overlay">
                     <p class="product__desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -248,7 +302,16 @@
             <li class="product__item item">
               <a class="product__link" href="">
                 <div class="product__wrap">
-                  <img src="./images/magazine.jpg" alt="magazine" width="370" />
+                  <img
+                    srcset="
+                      ./images/magazine/magazine-354.jpg 354w,
+                      ./images/magazine/magazine-370.jpg 370w,
+                      ./images/magazine/magazine-450.jpg 450w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                    src="./images/magazine/magazine-450.jpg"
+                    alt="foto-product-designer"
+                  />
                   <div class="product__overlay">
                     <p class="product__desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -266,7 +329,16 @@
             <li class="product__item item">
               <a class="product__link" href="">
                 <div class="product__wrap">
-                  <img src="./images/label.jpg" alt="label" width="370" />
+                  <img
+                    srcset="
+                      ./images/label/label-354.jpg 354w,
+                      ./images/label/label-370.jpg 370w,
+                      ./images/label/label-450.jpg 450w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                    src="./images/label/label-450.jpg"
+                    alt="foto-product-designer"
+                  />
                   <div class="product__overlay">
                     <p class="product__desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -284,7 +356,16 @@
             <li class="product__item item">
               <a class="product__link" href="">
                 <div class="product__wrap">
-                  <img src="./images/laptop2.jpg" alt="laptop" width="370" />
+                  <img
+                    srcset="
+                      ./images/laptop/laptop-354.jpg 354w,
+                      ./images/laptop/laptop-370.jpg 370w,
+                      ./images/laptop/laptop-450.jpg 450w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                    src="./images/laptop/laptop-450.jpg"
+                    alt="foto-product-designer"
+                  />
                   <div class="product__overlay">
                     <p class="product__desc">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
