--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               </ul>
             </div>
           </div>
-          <ul class="nav__list item list">
+          <ul class="nav__list">
             <li class="nav__item">
               <a class="nav__link nav__link--current" href="./index.html">Студія</a>
             </li>
@@ -93,15 +93,15 @@
             <li class="nav__item"><a class="nav__link" href="">Контакти</a></li>
           </ul>
         </nav>
-        <ul class="contacts contacts__contacts--tablet list">
-          <li class="contacts__item item">
+        <ul class="contacts contacts--tablet">
+          <li class="contacts__item">
             <a class="contacts__link" href="mailto:info@devstudio.com">
               <svg class="contacts__icon">
                 <use href="./images/symbol-defs.svg#icon-envelope"></use></svg
               >info@devstudio.com
             </a>
           </li>
-          <li class="contacts__item item">
+          <li class="contacts__item">
             <a class="contacts__link" href="tel:+380961111111">
               <svg class="contacts__icon contacts__icon--tel">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use></svg
@@ -124,8 +124,8 @@
       <section class="advantages section">
         <div class="container">
           <h2 class="advantages__title visually-hidden">Наші переваги</h2>
-          <ul class="advantages__list list">
-            <li class="advantages__item item">
+          <ul class="advantages__list card-set">
+            <li class="advantages__item card-set__item">
               <div class="advantages__picture">
                 <svg class="advantages__icon" width="70px" height="70px">
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
@@ -136,7 +136,7 @@
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li class="advantages__item item">
+            <li class="advantages__item card-set__item">
               <div class="advantages__picture">
                 <svg class="advantages__icon" width="70px" height="70px">
                   <use href="./images/symbol-defs.svg#icon-clock"></use>
@@ -147,7 +147,7 @@
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li class="advantages__item item">
+            <li class="advantages__item card-set__item">
               <div class="advantages__picture">
                 <svg class="advantages__icon" width="70px" height="70px">
                   <use href="./images/symbol-defs.svg#icon-diagram"></use>
@@ -158,7 +158,7 @@
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="advantages__item item">
+            <li class="advantages__item card-set__item">
               <div class="advantages__picture">
                 <svg class="advantages__icon" width="70px" height="70px">
                   <use href="./images/symbol-defs.svg#icon-astronaut"></use>
@@ -176,8 +176,8 @@
       <section class="examples section">
         <div class="container">
           <h2 class="examples__heading">Чим ми займаємося</h2>
-          <ul class="examples__list list">
-            <li class="examples__item item">
+          <ul class="examples__list card-set">
+            <li class="examples__item card-set__item">
               <div class="examples__content">
                 <img src="./images/computer.jpg" alt="computer" width="370" />
                 <div class="examples__overlay">
@@ -185,7 +185,7 @@
                 </div>
               </div>
             </li>
-            <li class="examples__item item">
+            <li class="examples__item card-set__item">
               <div class="examples__content">
                 <img src="./images/laptop.jpg" alt="laptop" width="370" />
                 <div class="examples__overlay">
@@ -193,7 +193,7 @@
                 </div>
               </div>
             </li>
-            <li class="examples__item item">
+            <li class="examples__item card-set__item">
               <div class="examples__content">
                 <img src="./images/smartphone.jpg" alt="smartphone" width="370" />
                 <div class="examples__overlay">
@@ -208,8 +208,8 @@
       <section class="team section">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
-          <ul class="team__list list">
-            <li class="team__item item">
+          <ul class="team__list card-set">
+            <li class="team__item card-set__item">
               <img
                 srcset="
                   ./images/foto-demianenko/foto-demianenko-270.jpg 270w,
@@ -275,7 +275,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team__item item">
+            <li class="team__item card-set__item">
               <img
                 srcset="
                   ./images/foto-repina/foto-repina-270.jpg 270w,
@@ -341,7 +341,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team__item item">
+            <li class="team__item card-set__item">
               <img
                 srcset="
                   ./images/foto-tarasov/foto-tarasov-270.jpg 270w,
@@ -407,7 +407,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team__item item">
+            <li class="team__item card-set__item">
               <img
                 srcset="
                   ./images/foto-ermakov/foto-ermakov-270.jpg 270w,
@@ -465,7 +465,7 @@
                       target="_blank"
                       rel="nofollow noopener noreferrer"
                     >
-                      <svg class="network-icons item" width="20" height="20">
+                      <svg class="socials__icon item" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -480,38 +480,38 @@
       <section class="clients section">
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
-          <ul class="clients__list list">
-            <li class="clients__item item">
+          <ul class="clients__list card-set">
+            <li class="clients__item card-set__item">
               <a class="clients__link" href="" target="_blank" rel="nofollow noopener noreferrer">
                 <svg class="clients__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client-one"></use></svg
               ></a>
             </li>
-            <li class="clients__item item">
+            <li class="clients__item card-set__item">
               <a class="clients__link" href="" target="_blank" rel="nofollow noopener noreferrer">
                 <svg class="clients__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client-two"></use></svg
               ></a>
             </li>
-            <li class="clients__item item">
+            <li class="clients__item card-set__item">
               <a class="clients__link" href="" target="_blank" rel="nofollow noopener noreferrer">
                 <svg class="clients__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client-three"></use></svg
               ></a>
             </li>
-            <li class="clients__item item">
+            <li class="clients__item card-set__item">
               <a class="clients__link" href="" target="_blank" rel="nofollow noopener noreferrer">
                 <svg class="clients__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client-four"></use></svg
               ></a>
             </li>
-            <li class="clients__item item">
+            <li class="clients__item card-set__item">
               <a class="clients__link" href="" target="_blank" rel="nofollow noopener noreferrer">
                 <svg class="clients__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client-five"></use></svg
               ></a>
             </li>
-            <li class="clients__item item">
+            <li class="clients__item card-set__item">
               <a class="clients__link" href="" target="_blank" rel="nofollow noopener noreferrer">
                 <svg class="clients__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client-six"></use></svg
