--- a/portfolio.html
+++ b/portfolio.html
@@ -136,8 +136,8 @@
               <button class="portfolio__btn" type="button">Маркетинг</button>
             </li>
           </ul>
-          <ul class="product card-set list">
-            <li class="product__item item">
+          <ul class="product card-set">
+            <li class="product__item card-set__item">
               <a class="product__link" href="">
                 <div class="product__wrap">
                   <img
@@ -164,7 +164,7 @@
                 </div>
               </a>
             </li>
-            <li class="product__item item">
+            <li class="product__item card-set__item">
               <a class="product__link" href="">
                 <div class="product__wrap">
                   <img
@@ -191,7 +191,7 @@
                 </div>
               </a>
             </li>
-            <li class="product__item item">
+            <li class="product__item card-set__item">
               <a class="product__link" href="">
                 <div class="product__wrap">
                   <img
@@ -218,7 +218,7 @@
                 </div>
               </a>
             </li>
-            <li class="product__item item">
+            <li class="product__item card-set__item">
               <a class="product__link" href="">
                 <div class="product__wrap">
                   <img
@@ -245,7 +245,7 @@
                 </div>
               </a>
             </li>
-            <li class="product__item item">
+            <li class="product__item card-set__item">
               <a class="product__link" href="">
                 <div class="product__wrap">
                   <img
@@ -272,7 +272,7 @@
                 </div>
               </a>
             </li>
-            <li class="product__item item">
+            <li class="product__item card-set__item">
               <a class="product__link" href="">
                 <div class="product__wrap">
                   <img
@@ -299,7 +299,7 @@
                 </div>
               </a>
             </li>
-            <li class="product__item item">
+            <li class="product__item card-set__item">
               <a class="product__link" href="">
                 <div class="product__wrap">
                   <img
@@ -326,7 +326,7 @@
                 </div>
               </a>
             </li>
-            <li class="product__item item">
+            <li class="product__item card-set__item">
               <a class="product__link" href="">
                 <div class="product__wrap">
                   <img
@@ -353,7 +353,7 @@
                 </div>
               </a>
             </li>
-            <li class="product__item item">
+            <li class="product__item card-set__item">
               <a class="product__link" href="">
                 <div class="product__wrap">
                   <img
