--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- Hedear -->
+    <!-- HEADER -->
     <header class="header">
       <div class="header__group container">
+        <!-- Header-navigation -->
         <nav class="nav">
+          <!-- Logo -->
           <a href="./index.html" class="logo"
             >Web<span class="logo__secondary-part">Studio</span></a
           >
+          <!-- Mobile-menu-button -->
           <button
             type="button"
             class="menu-button is-open"
@@ -38,9 +41,11 @@
               <use class="mobile-btn-icon__close" href="./images/symbol-defs.svg#icon-close"></use>
             </svg>
           </button>
+          <!-- Mobile-menu-container -->
           <div class="menu-container" id="menu-container" data-menu>
+            <!-- Mobile-menu-navigation -->
             <div class="menu-nav">
-              <ul class="menu-nav__list item list">
+              <ul class="menu-nav__list">
                 <li class="menu-nav__item">
                   <a class="menu-nav__link menu-nav__link--current" href="./index.html">Студія</a>
                 </li>
@@ -52,39 +57,42 @@
                 </li>
               </ul>
             </div>
+            <!-- Mobile-menu-contacts -->
             <div class="menu-contacts">
-              <ul class="menu-contacts__list list">
-                <li class="menu-contacts__item item">
+              <ul class="menu-contacts__list">
+                <li class="menu-contacts__item">
                   <a
                     class="menu-contacts__link menu-contacts__link--mobile"
                     href="tel:+380961111111"
                     >+38 096 111 11 11
                   </a>
                 </li>
-                <li class="menu-contacts__item item">
+                <li class="menu-contacts__item">
                   <a class="menu-contacts__link" href="mailto:info@devstudio.com"
                     >info@devstudio.com
                   </a>
                 </li>
               </ul>
             </div>
+            <!-- Mobile-menu-socials -->
             <div class="menu-socials">
-              <ul class="menu-socials__list list">
-                <li class="menu-socials__item item">
+              <ul class="menu-socials__list">
+                <li class="menu-socials__item">
                   <a class="menu-socials__link" href="">Instagram</a>
                 </li>
-                <li class="menu-socials__item item">
+                <li class="menu-socials__item">
                   <a class="menu-socials__link" href="">Twitter</a>
                 </li>
-                <li class="menu-socials__item item">
+                <li class="menu-socials__item">
                   <a class="menu-socials__link" href="">Facebook</a>
                 </li>
-                <li class="menu-socials__item item">
+                <li class="menu-socials__item">
                   <a class="menu-socials__link" href="">LinkedIn</a>
                 </li>
               </ul>
             </div>
           </div>
+          <!-- Tablet,Desktop-navigation -->
           <ul class="nav__list">
             <li class="nav__item">
               <a class="nav__link nav__link--current" href="./index.html">Студія</a>
@@ -93,6 +101,7 @@
             <li class="nav__item"><a class="nav__link" href="">Контакти</a></li>
           </ul>
         </nav>
+        <!-- Header-contacts -->
         <ul class="contacts contacts--tablet">
           <li class="contacts__item">
             <a class="contacts__link" href="mailto:info@devstudio.com">
@@ -111,16 +120,16 @@
         </ul>
       </div>
     </header>
-
+    <!-- MAIN -->
     <main>
-      <!-- Hero -->
+      <!-- HERO -->
       <section class="hero hero--overlay">
         <h1 class="hero__title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
         <button class="hero__button" type="button" name="request our service" data-modal-open>
           Замовити послугу
         </button>
       </section>
-      <!-- Our advantages -->
+      <!-- OUR ADVANTAGES -->
       <section class="advantages section">
         <div class="container">
           <h2 class="advantages__title visually-hidden">Наші переваги</h2>
@@ -172,7 +181,7 @@
           </ul>
         </div>
       </section>
-      <!-- What we do -->
+      <!-- WHAT WE DO -->
       <section class="examples section">
         <div class="container">
           <h2 class="examples__heading">Чим ми займаємося</h2>
@@ -204,7 +213,7 @@
           </ul>
         </div>
       </section>
-      <!-- Our Team -->
+      <!-- OUR TEAM -->
       <section class="team section">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
@@ -476,7 +485,7 @@
           </ul>
         </div>
       </section>
-      <!-- Regular-clients -->
+      <!-- REGULAR-CLIENTS -->
       <section class="clients section">
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
@@ -521,7 +530,7 @@
         </div>
       </section>
     </main>
-    <!-- Footer -->
+    <!-- FOOTER -->
     <footer class="footer">
       <div class="footer__container container">
         <div class="footer__item footer__item--mobile item">
@@ -549,6 +558,7 @@
             </ul>
           </address>
         </div>
+        <!-- Footer-  networks -->
         <div class="footer__networks footer__networks--mobile item">
           <p class="footer__desc footer__desc--mobile">приєднуйтесь</p>
           <ul class="socials list">
@@ -602,6 +612,7 @@
             </li>
           </ul>
         </div>
+        <!-- Subscription -->
         <div class="subscription item">
           <label class="subscription__form item">
             <span class="subscription__label subscription__label--mobile"
@@ -623,13 +634,16 @@
         </div>
       </div>
     </footer>
+    <!-- Backdrop -->
     <div class="backdrop is-hidden" data-modal>
+      <!-- MODAL -->
       <div class="modal">
         <button class="modal__btn" type="button" data-modal-close>
           <svg class="modal__icon" width="11" height="11">
             <use href="./images/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
+        <!-- Register-form -->
         <form class="register" name="register-form">
           <strong class="register__title">Залиште свої дані, ми вам передзвонимо</strong>
           <div class="register__form" role="group">
@@ -685,7 +699,7 @@
         </form>
       </div>
     </div>
-
+    <!-- Script -->
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
