--- a/portfolio.html
+++ b/portfolio.html
@@ -16,13 +16,16 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- Hedear -->
+    <!-- HEADER -->
     <header class="header">
       <div class="header__group container">
+        <!-- Header-navigation -->
         <nav class="nav">
+          <!-- Logo -->
           <a href="./index.html" class="logo"
             >Web<span class="logo__secondary-part">Studio</span></a
           >
+          <!-- Mobile-menu-button -->
           <button
             type="button"
             class="menu-button is-open"
@@ -38,74 +41,76 @@
               <use class="mobile-btn-icon__close" href="./images/symbol-defs.svg#icon-close"></use>
             </svg>
           </button>
+          <!-- Mobile-menu-container -->
           <div class="menu-container" id="menu-container" data-menu>
+            <!-- Mobile-menu-navigation -->
             <div class="menu-nav">
-              <ul class="menu-nav__list item list">
+              <ul class="menu-nav__list">
                 <li class="menu-nav__item">
                   <a class="menu-nav__link" href="./index.html">Студія</a>
                 </li>
                 <li class="menu-nav__item">
-                  <a class="menu-nav__link menu-nav__link--current" href="./portfolio.html"
-                    >Портфоліо</a
-                  >
+                  <a class="menu-nav__link menu-nav__link--current" href="./portfolio.html">Портфоліо</a>
                 </li>
                 <li class="menu-nav__item">
                   <a class="menu-nav__link" href="">Контакти</a>
                 </li>
               </ul>
             </div>
+            <!-- Mobile-menu-contacts -->
             <div class="menu-contacts">
-              <ul class="menu-contacts__list list">
-                <li class="menu-contacts__item item">
+              <ul class="menu-contacts__list">
+                <li class="menu-contacts__item">
                   <a
                     class="menu-contacts__link menu-contacts__link--mobile"
                     href="tel:+380961111111"
                     >+38 096 111 11 11
                   </a>
                 </li>
-                <li class="menu-contacts__item item">
+                <li class="menu-contacts__item">
                   <a class="menu-contacts__link" href="mailto:info@devstudio.com"
                     >info@devstudio.com
                   </a>
                 </li>
               </ul>
             </div>
+            <!-- Mobile-menu-socials -->
             <div class="menu-socials">
-              <ul class="menu-socials__list list">
-                <li class="menu-socials__item item">
+              <ul class="menu-socials__list">
+                <li class="menu-socials__item">
                   <a class="menu-socials__link" href="">Instagram</a>
                 </li>
-                <li class="menu-socials__item item">
+                <li class="menu-socials__item">
                   <a class="menu-socials__link" href="">Twitter</a>
                 </li>
-                <li class="menu-socials__item item">
+                <li class="menu-socials__item">
                   <a class="menu-socials__link" href="">Facebook</a>
                 </li>
-                <li class="menu-socials__item item">
+                <li class="menu-socials__item">
                   <a class="menu-socials__link" href="">LinkedIn</a>
                 </li>
               </ul>
             </div>
           </div>
-          <ul class="nav__list item list">
+          <!-- Tablet,Desktop-navigation -->
+          <ul class="nav__list">
             <li class="nav__item">
-              <a class="nav__link" href="./index.html">Студія</a>
+              <a class="nav__link"  href="./index.html">Студія</a>
             </li>
-            <li class="nav__item">
-              <a class="nav__link nav__link--current" href="./portfolio.html">Портфоліо</a>
-            </li>
+            <li class="nav__item"><a class="nav__link nav__link--current" href="./portfolio.html">Портфоліо</a></li>
             <li class="nav__item"><a class="nav__link" href="">Контакти</a></li>
           </ul>
         </nav>
-        <ul class="contacts contacts__contacts--tablet list">
-          <li class="contacts__item item">
+        <!-- Header-contacts -->
+        <ul class="contacts contacts--tablet">
+          <li class="contacts__item">
             <a class="contacts__link" href="mailto:info@devstudio.com">
               <svg class="contacts__icon">
                 <use href="./images/symbol-defs.svg#icon-envelope"></use></svg
               >info@devstudio.com
             </a>
           </li>
-          <li class="contacts__item item">
+          <li class="contacts__item">
             <a class="contacts__link" href="tel:+380961111111">
               <svg class="contacts__icon contacts__icon--tel">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use></svg
@@ -115,6 +120,7 @@
         </ul>
       </div>
     </header>
+    <!-- MAIN -->
     <main>
       <section class="portfolio section">
         <div class="container">
